Cambio de color en los botones

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
                     <p>Total a Pagar:</p>
                     <p class="box" id="preciototal"></p>
                 </div>
-                <div class="botones">
+                <div class="unidades">
                     <p>Cantidad:</p>
                     <p class="cantidad" id="cantidades"></p>
+                    <div class="botones">
                     <button id="sumar"><i class="fa-solid fa-plus"></i></button>
                     <button id="restar"><i class="fa-solid fa-minus"></i></button>
+                    </div>
                 </div>
             </div>
         </section>
